--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bespoke": "^1.1.0",
+    "bespoke-keys": "^1.1.0",
+    "bespoke-touch": "^1.0.0",
+    "firebase": "^11.3.1",
+    "keen-slider": "^6.8.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.1.5"
   },
   "devDependencies": {
