--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "bespoke": "^1.1.0",
     "bespoke-keys": "^1.1.0",
     "bespoke-touch": "^1.0.0",
@@ -19,7 +20,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-responsive-carousel": "^3.2.23",
-    "react-router": "^7.1.5"
+    "react-router": "^7.1.5",
+    "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
